--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -31,7 +31,7 @@ body{
     padding: 0.2rem 1rem !important;
 }
 #basic-navbar-nav,.navbar-nav{
-    height: 3.6rem !important;
+    /* height: 3.6rem !important; */
     align-items: center !important;
 }
 .navbar-nav{
