--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -68,8 +68,9 @@ body{
       left: 0;
       right: 0;
       /* background: #40E0D0;  fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #FF0080, #FF8C00, #40E0D0);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+      background: #ED213A;  /* fallback for old browsers */
+      background: -webkit-linear-gradient(to right, #db6e62, #ED213A);  /* Chrome 10-25, Safari 5.1-6 */
+      background: linear-gradient(to right, #e97e72, #ED213A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
       
       -webkit-transform: scaleX(0);
       transform: scaleX(0);
