--- a/src/components/product/product.css
+++ b/src/components/product/product.css
@@ -1,94 +1,43 @@
 @import url('https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
-
-.pattern {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 400% 400%;
-	animation: gradient 10s ease infinite;
-    height: 2.5rem;
+#logo{
+    width:10%
 }
-
-@keyframes gradient {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+#products{
+    align-items:center
 }
-body{
-    font-family: 'Roboto', sans-serif;
+.product_details{
+    padding: 2.8rem 4rem;
 }
-.navbar-brand{
+#products h1{
+    font-size: 3.1rem;
     font-family: 'Tangerine';
-    font-size: 2rem;
-    font-weight: 800;
+    font-weight: bolder;
+    text-shadow: 1px 1px 2px;
+    padding-left: 1.5rem;
+    padding-top: 1.2rem;
 }
-.navbar{
-    padding: 0.2rem 1rem !important;
+.product_details p{
+    margin-left: 6rem;
+    font-family: 'Poppins';
+    text-align: justify;
+    letter-spacing: 2px;
+    font-size: 0.9rem;
+    line-height: 1.8rem;
+    margin-top: 2rem;
 }
-#basic-navbar-nav,.navbar-nav{
-    /* height: 3.6rem !important; */
-    align-items: center !important;
+.btn1{
+    float: right;
+    margin-top: 2rem;
+    width: 8rem;
+    height: 3rem;
+    background: #27ac31db;
+    border: none;
+    outline: 2px solid #27ac31db;
+    border-radius: 0;
+    transition:outline-offset 500ms linear;
+    transition: background-color 500ms ease-in-out;
 }
-.navbar-nav{
-    margin-right: 3rem;
-}
-
-.nav-link{
-    padding: 1rem 1rem !important;
-    margin-left: 2rem;
-}
-
-.c4{
-    font-family: 'Poppins' !important;
-    font-weight: 500 !important;
-    /* text-shadow: 1px 1px -1px; */
-    color: #ba3779 !important;
-    font-size: 1.1rem !important;
-    transition:transform 500ms linear !important;
-    -webkit-transition: color 300ms;
-    transition: color 300ms;
-    position: relative;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -moz-osx-font-smoothing: grayscale;
-}
-    .c4::before{
-      content: "";
-      position: absolute;
-      z-index: -1;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      /* background: #40E0D0;  fallback for old browsers */
-      background: #ED213A;  /* fallback for old browsers */
-      background: -webkit-linear-gradient(to right, #db6e62, #ED213A);  /* Chrome 10-25, Safari 5.1-6 */
-      background: linear-gradient(to right, #e97e72, #ED213A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-      
-      -webkit-transform: scaleX(0);
-      transform: scaleX(0);
-      -webkit-transform-origin: 50%;
-      transform-origin: 50%;
-      -webkit-transition-property: transform;
-      transition-property: transform;
-      -webkit-transition: 300ms ease-out;
-      transition: 300ms ease-out;
-    }
-    .c4:hover::before{
-      -webkit-transform: scaleX(1);
-      transform: scaleX(1)
-}
-.c4:hover{
-    /* background: #40E0D0;  fallback for old browsers */
-transform:scale(1.1);
-color: white !important;
- /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+.btn1:hover{
+    
 }
