--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -23,9 +23,10 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 .sticky {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
   }
   
 .navbar-brand{
