--- a/src/components/demo/demo.css
+++ b/src/components/demo/demo.css
@@ -19,7 +19,9 @@ text-align: center;
     /* width: 100%; */
     box-shadow: 1px 1px 10px 1px;
     height: 70vh;
-    border-radius:1rem
+    border-radius:1rem;
+    margin-top: 1rem;
+    object-fit:cover
 }
 #videos:focus{
     outline:none !important
