--- a/src/components/demo/demo.css
+++ b/src/components/demo/demo.css
@@ -37,6 +37,6 @@ text-align: center;
 .video p{
     font-family: 'Poppins';
     color: #E81;
-    opacity: 77%;
+    opacity: .7;
     padding: 0.5rem;
 }
